<resources>
    <string name="app_name">Bsure</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="Account">Accountnumber invalid</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="tnc">By signing in you are agreeing our</string>
    <string name="Signin">Sign in</string>
    <string name="logo">logo</string>
    <string name="tandc">Terms and privacy policy</string>
    <string name="register">Register</string>
    <string name="retype_password">Retype Password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_inSmallcase">Sign in</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_here">Register here</string>
    <string name="enter_relationship_with_nominee">Enter relationship with nominee</string>
    <string name="enter_nominee_s_mobile_number">Enter nominee’s mobile number</string>
    <string name="enter_nominee_s_mail_id">Enter nominee’s mail id</string>
    <string name="enter_nominee_s_address">Enter nominee’s address</string>
    <string name="upload_nominee_s_id_proof">Upload nominee\'s Id Proof</string>
    <string name="save_data">Save Data</string>
    <string name="enter_nominee_s_name">Enter Nominee\'s name</string>
    <string name="nominee_details">Nominee Details</string>
    <string name="add_bank_proof_optional">Add Bank Proof (Optional)</string>
    <string name="account_details">Account Details</string>
    <string name="finding_account">finding account</string>
    <string name="stocks">Stocks</string>
    <string name="stocks_details">Stocks Details</string>
    <string name="enter_your_stock_broker_name">Enter your Stock broker name</string>
    <string name="enter_your_bo_id_demat_number_optional">Enter your BO ID/Demat Number(Optional)</string>
    <string name="enter_stock_description_optional">Enter stock description(Optional)</string>
    <string name="add_stocks_proof_optional">Add stocks proof(Optional)</string>
    <string name="mutual_funds">Mutual Funds</string>
    <string name="enter_your_mutual_fund_name">Enter your Mutual fund name</string>
    <string name="enter_your_folio_name_optional">Enter your folio name (Optional)</string>
    <string name="enter_your_scheme_name_optional">Enter your scheme name(Optional)</string>
    <string name="enter_your_fund_type_optional">Enter your Fund type (Optional)</string>
    <string name="enter_descripton_about_mutual_funds_optional">Enter description about mutual funds(Optional)</string>
    <string name="add_anyfund_proof_optional">Add anyfund proof(Optional)</string>
    <string name="enter_bank_name">Enter Bank name</string>
    <string name="enter_bank_account_number_optional">Enter bank account number(Optional)</string>
    <string name="enter_your_bank_ifsc_code_optional">Enter your bank IFSC code(Optional)</string>
    <string name="enter_your_branch_name_optional">Enter your branch name (Optional)</string>
    <string name="enter_bank_description">Enter bank description</string>
    <string name="it_s_empty_here_click_here_to_add">It\'s empty here..click here to add</string>
    <string name="add_details">Add details</string>
    <string name="don_t_add">Don\'t add</string>
    <string name="ifsc_code">IFSC Code:</string>
    <string name="branch_name">Branch Name:</string>
    <string name="bank_name">Bank Name:</string>
    <string name="account_number">Account Number:</string>
    <string name="agree_to_terms_and_conditions">Agree to <u><font color='#2EA9C9'>Terms and conditions</font></u></string>
    <string name="add_any_attachment">Attach an ID proof of nominee</string>
    <string name="write_your_will_here">write your will here</string>
    <string name="edit">Edit</string>
    <string name="confirm">confirm</string>
    <string name="what_does_bsure_live_do">What does Bsure.live do?</string>
    <string name="description1">description</string>
    <string name="terms_amp_conditions">Terms of Use</string>
    <string name="features">Features</string>
    <string name="assets">Assets</string>
    <string name="nominee">Nominee</string>
    <string name="nudge">Nudge</string>
    <string name="distribution">Distribution</string>
    <string name="insurances">Insurances</string>
    <string name="vehicle">Vehicle</string>
    <string name="health">Health</string>
    <string name="home">Home</string>
    <string name="life">Life</string>
    <string name="user_name">User Name</string>
    <string name="credential">Credential</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="read_full_terms_amp_conditions"><![CDATA[Read Full Terms & Conditions.]]></string>
    <string name="start_using_bsure_nwith_premium_benifits">Start Using Bsure \nwith Premium Benefits</string>
    <string name="about_us_txt">If you have any concerns, complaints or grievances about the terms or other users or their manner of use of the application infringe or violate your rights or any complaints about how we handle your personal information, please feel free to contact customer support within the Bsure.live App, on Bsure.live’s official social media channels, or the Grievance Officer any time at: Email: grievanceofficer@Bsure.live</string>
    <string name="familyicon">familyIcon</string>
    <string name="nudge_desc"> 1. Bsure tracks the status of user on time to time.\n
 2. Notifies the family members when no input received from user. \n3. In case of any untoward incident, shares the asset information with nominees.</string>
    <string name="bullted_benifit_nudge">
1. one.\n2. Two.\n3. Three.</string>
    <string name="tnc_desc">Welcome to the BSure.live! At Bsure.live we are aiming to secure all your financial information and data and transfer it to your family members on time. Our aim is to ensure our users family members don\'t have to run from pillar to post to get the financial information of user when they desperately need them.</string>
    <string name="tnc_eligibility">By registering with Bsure.live and accessing the BSure.live Services, you are representing the following: \n
    <br> 1. You are 18 years of age or older. \n</br>
    <br> 2. You are capable of entering into a legally binding agreement. \n</br>
    <br> 3. You are not barred or otherwise legally prohibited from accessing or using the Bsure.live App and Bsure.live Services. \n</br>
        If you allow anyone to use your account, including individuals under 18 years of age, you will still be responsible for ensuring that such individuals comply with these Terms of Use. You will be responsible for all actions these individuals take in and/or through your account. You also acknowledge that Bsure.live does not have the responsibility of ensuring that You meet the aforesaid eligibility requirements.\n
        Please read the terms and conditions carefully before registering, accessing or using the Bsure.live Services (defined below) offered through the Bsure.live website, Bsure.live App (defined below) or through applications or websites of Bsure.live Group Entities (defined below). These terms and conditions are a legal contract ("<b>Terms of Use</b>") between You and Bsure.live (“<b>Bsure.live</b>”). You agree and acknowledge that you have read the terms and conditions set forth below. If you do not agree to these Terms of Use or do not wish to be bound by these Terms of Use, you may not use the Bsure.live Services and/or immediately terminate the Services and/or uninstall the Bsure.live App.
    </string>
    <string name="tnc_desc1"><b>“Bsure.live”, “Bsure.live” “We”, “Us”, “Our”</b> means Bsure.live and Bsure.live Group Entities.\n
<br><b>“You”, “Yours”, “Yourself”, “User”</b> means any prospective user, or registered user of Bsure.live and Bsure.live Group Entities, including but not limited to customers and Commercial Partners. \n</br>
<br>"<b>Bsure.live App</b>" means mobile application(s), hosted by Bsure.live and Bsure.live Group Entities for providing services to the Users, and Commercial Partners. \n</br>
<br>"<b>Bsure.live Group Entities</b>" means subsidiaries and affiliates of Bsure.live. \n</br>
<br>"<b>Bsure.live Platform</b>" means any platform owned/subscribed/used by Bsure.live or Bsure.live Group Entities including but not limited to the Bsure.live Website, the Bsure.live App, other mobile applications, devices, URLs/links, notifications, chatbots, Bsure.live’s social media channels or any other communication medium or mechanism used by Bsure.live or Bsure.live Group Entities to provide services to the Users.\n</br>
<br>"<b>Bsure.live Website</b>" means  https://Bsure.live or any other website hosted or registered by Bsure.live or Bsure.live Group Entities. \n</br>
<br>"<b>Bsure.live Services</b>" means and include all services offered / to be offered by Bsure.live, and Bsure.live Group Entities either directly or through its Commercial Partners. \n</br>
<br>"<b>Commercial Partner</b>" means any individual or entity with whom Bsure.live or Bsure.live Group Entities have a contractual relationship and includes but is not limited to entities offering rewards on Bsure.live App, lawyers and other service providers who work on behalf of Bsure.live. \n</br>
<br>"<b>Terms of use” / “Terms and Conditions</b>" are interchangeably used and mean these Terms of Service including the Supplemental Terms. \n</br>
    </string>
</resources>