<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_Us"
    android:orientation="vertical"
    android:background="@color/bg_primary">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topappbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:backgroundTint="@color/colorPrimary"
            app:titleTextColor="@color/white"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:title="Bsure" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="25dp">
        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <LinearLayout
                android:id="@+id/tv_userData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_marginVertical="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="20dp"
                    android:textSize="25sp"
                    android:text="@string/user_name"
                    style="@style/Title"/>
                <TextView
                    android:id="@+id/tv_user_credential"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:text="@string/credential"
                    android:textSize="22sp"
                    android:textColor="@color/primary_text_color"
                    android:layout_marginStart="20dp"
                    style="@style/Description"/>
            </LinearLayout>
            <ImageView
                android:layout_weight="0.3"
                android:textAlignment="textEnd"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginVertical="5dp"
                android:src="@drawable/ic_profile_dark_icon"
                android:contentDescription="@string/logo" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        app:cardCornerRadius="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tv_aboutUs"
                android:layout_marginVertical="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/about_us"
                android:drawablePadding="20dp"
                android:textColor="@color/primary_text_color"
                style="@style/Description"
                app:drawableStartCompat="@drawable/ic_profile_dark_icon" />
            <TextView
                android:id="@+id/tv_tnc"
                android:layout_marginVertical="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/terms_amp_conditions"
                android:drawablePadding="20dp"
                android:textColor="@color/primary_text_color"
                style="@style/Description"
                app:drawableStartCompat="@drawable/ic_terms_and_conditions" />
            <TextView
                android:id="@+id/tv_faq"
                android:layout_marginVertical="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/faq"
                android:drawablePadding="20dp"
                android:textColor="@color/primary_text_color"
                style="@style/Description"
                app:drawableStartCompat="@drawable/ic_faq" />
            <TextView
                android:id="@+id/tv_contactUs"
                android:layout_marginVertical="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/contact_us"
                android:drawablePadding="20dp"
                android:textColor="@color/primary_text_color"
                style="@style/Description"
                app:drawableStartCompat="@drawable/ic_contact_us" />
            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:drawablePadding="20dp"
                android:layout_marginVertical="7dp"
                android:layout_marginHorizontal="15dp"
                android:textColor="@color/primary_text_color"
                style="@style/Description"
                app:drawableStartCompat="@drawable/ic_logout_icon" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>